<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.kerneldc</groupId>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
<!-- 		<version>2.4.5</version> -->
		<version>2.5.6</version>
<!-- 		<version>2.2.5</version> -->
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	
	<artifactId>ipm-be-project</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<java.version>17</java.version>
		<repo-url>http://localhost:8081</repo-url>
	</properties>
	<modules>
		<module>common-domain</module>
		<module>csv-file-transfer-rest</module>
		<module>investment-portfolio-domain</module>
		<module>investment-portfolio-batch</module>
	</modules>
	
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
<!-- 			<scope>runtime</scope> -->
		</dependency>

<!-- 		<dependency> -->
<!-- 		    <groupId>com.oracle.database.jdbc</groupId> -->
<!-- 		    <artifactId>ojdbc8</artifactId> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 		    <groupId>com.oracle.database.jdbc</groupId> -->
<!-- 		    <artifactId>ucp</artifactId> -->
<!-- 		</dependency> -->

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.8.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-text</artifactId>
		    <version>1.9</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.4</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
		    <groupId>com.googlecode.libphonenumber</groupId>
		    <artifactId>libphonenumber</artifactId>
		    <version>8.12.24</version>
		</dependency>
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>30.1.1-jre</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

<!-- 	<build> -->
<!-- 		<plugins> -->
			
<!-- 			<plugin> -->
<!-- 				<groupId>org.springframework.boot</groupId> -->
<!-- 				<artifactId>spring-boot-maven-plugin</artifactId> -->
<!-- 				<configuration> -->
<!-- 					<executable>true</executable> -->
<!-- 				</configuration> -->
<!-- 			</plugin> -->
			
<!-- 		</plugins> -->
<!-- 	</build> -->
	
	<distributionManagement>

		<snapshotRepository>
			<id>kerneldc-nexus</id>
			<url>${repo-url}/repository/maven-snapshots</url>
		</snapshotRepository>
		<repository>
			<id>kerneldc-nexus</id>
			<name>Releases</name>
			<url>${repo-url}/repository/maven-releases</url>
		</repository>

	</distributionManagement>

	<scm>
		<url>scm:git:https://github.com/thalabi/ipm-be</url>
		<connection>scm:git:https://github.com/thalabi/ipm-be</connection>
		<developerConnection>scm:git:https://github.com/thalabi/ipm-be</developerConnection>
	  	<tag>HEAD</tag>
	</scm>
	
</project>